[tool.poetry]
name = "net-gdcxxy-chengkao-client"
version = "0.1.0"
description = ""
authors = ["mac <137294789@qq.com>"]
readme = "README.md"
packages = [{include = "net"}]

[tool.poetry.dependencies]
python = "^3.8,<3.13"
playwright = "^1.42.0"
httpx = "^0.27.0"
redis = "^5.0.3"
pyexecjs = "^1.5.1"
pydantic = "^2.6.4"
tenacity = "^8.2.3"
beautifulsoup4 = "^4.12.3"
setuptools = "^69.2.0"
pyinstaller = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
